# kanttarelli

./: LICENSE  R code for Supporting Data 01 germplasm resources 3 sets.r  R code for Supporting Data 02 Arabidopsis complementary assay.R  R code for Supporting Data 03 SL quantification time course.R  R code for Supporting Data 04 O.minor germination assay.R  R code for Supporting Data 06 RNAi manual phenotyping.R  R code for Supporting Data 07 RNAi greenhouse summer scan.R  R code for Supporting Data 07 RNAi greenhouse winter scan.R  R code for Supporting Data 08 RNAi NaPPI phenotyping.R  R code for Supporting Data 09 field scanning.R  R code for Supporting Data 10 decapitation assay.R  R code for Supporting Data 11 stem PAT.R  R code for Supporting Data 12 IAA stems profiling.R  R code for Supporting Data 13 sucrose stems profiling.R  R code for Supporting Data 14 stem area quantification.R  README.md
LSM simulation/: .gitignore  Cargo.toml  Readme.md
LSM simulation/assets/: bud.glb  segment.glb  segment_branching2.glb
LSM simulation/src/: gui_run.rs  instance_data.rs  main.rs  model_functions.rs  vec_tree.rs
